# python-rapidjson

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt  geometry.cpp  pyproject.toml  rapidjson.cpp  requirements-test.txt  run_script.sh  setup.py  units.cpp
.github/workflows/: main.yml
cmake/: ygg_options.cmake
docs/: dump.rst  dumps.rst  encoder.rst  loads.rst  quickstart.rst  validator.rst
tests/: conftest.py  test_base_types.py  test_geometry.py  test_normalizer.py  test_numpy.py  test_python_classes.py  test_refs_count.py  test_schema_encoder.py  test_unicode.py  test_units.py  test_validator.py
